work around for updating lab1
I just copied the code from the repository where i had originally written this instead of here, same as the code i sent over email.

--- a/<!DOCTYPE html>.html
+++ b/<!DOCTYPE html>.html
@@ -1,8 +1,38 @@
 <!DOCTYPE html>
 <html>
-    </head>
-    <body>
-        <h1> Hello World</h1>
-    <body> <h2> shall we play a game? </h2>
-    </body>
+<head>
+    <meta charset="UTF-8" />
+    <title> Joshua | Lab 1 </title>
+    <body> Getting to know Josh </body>
+    </h2> Introduction </h2> 
+        <paragraph> Hello, I am Joshua Hayes, I am a rising Junior here at Lesley University. I am from Auburn, Massachusetts and I am 24 years old, will be 25 before spring break ends at the end of this semester. Somethings I like are: playing videogames, reading comics, listening to music and doodling.
+        <h2> Music </h2>
+            <ol> Favorite music style is Rock or Metal.
+                <li> My number 1 favorite band since I was in high school has been <a href="https://open.spotify.com/artist/0CEFCo8288kQU7mJi25s6E"> Hollywood Undead</a> </li>
+                <li> My second favorite band has always been a close second but its definetly got to be <a href="https://open.spotify.com/artist/2xiIXseIJcq3nG7C8fHeBj"> Three Days Grace</a> </li>
+                <li> I can never decide what band or artist comes in third but one I end up playing more then others when i hand pick songs is <a href="https://open.spotify.com/artist/5t28BP42x2axFnqOOMg3CM"> Five Finger Death Punch </a></li>
+            </ol>       
+        <h2> Food </h2>
+            <ul> 
+                <li> My favorite food has to be a good <a href="https://www.cheesecake.com/History-Of-Cheesecake.asp"> cheesecake </a>, it always makes me feel a little better whenever I have a solid slice of cheesecake. </li>
+                <li> A rare treat for me are <a href="https://www.thekitchn.com/sausage-roll-recipe-23254758"> sausage rolls </a>; whenever i spent time in england on trips or when i saw my fathers family in general i would alwayseat a ton of sausage rolls, my go to choice on the road. </li>
+                <li> My most common easy to make go to food has to be <a href="https://www.twopeasandtheirpod.com/cinnamon-toast-pbj/"> PBJs, with cinnamon bread when possible. </a>
+            </ul>
+        <h2> Trips </h2>
+        <table border="5" cellpadding="5" width="100%">
+            <tr> 1.How? <br>
+                <td> 1. Usually I end up traveling by plane because my family and I like to take trips out to Europe to visit my father's side of the family who live in England still so plane is the only option. </td> 
+            </tr>
+                 
+            <tr> 
+                2.Where? <br>
+                <td> 2.  <a href="https://www.visitdevon.co.uk/sidmouth/"> Devon </a>,  <a href="https://parisjetaime.com/eng/"> Paris </a>, <a href= "https://www.jungfrau.ch/en-gb/jungfraujoch-top-of-europe/"> Jungfraujoch </a> </td>
+                </tr>
+            <tr> 
+                3.When? <br>
+                <td> 3. The when is usually during the summer when the weather is best and people have more free time, sometimes the trips are early spring  but usually it comes down to weather where we are going and peoples availability. </td>
+                </tr>
+
+    
+</body>
 </html>
